--- a/static/css/first.css
+++ b/static/css/first.css
@@ -28,13 +28,13 @@ body{
   display: flex;align-items: center;justify-content: center;
   text-decoration: none;  
 }
-
+/*
 .right_side{
   display: flex;align-items: end;
 
 
 }
-
+*/
 .topnav a:hover{
   background-color: rgb(20, 20, 20);
   color: rgb(255, 255, 255);
@@ -75,6 +75,12 @@ body{
 .second_menu:hover{
   background-color: rgb(43, 76, 49);
   
+}
+
+.second_menu.active{
+  width: auto;
+  height: 500px;
+  background-color: aqua;
 }
 
 .menu_content {
