--- a/myself/templates/myself/two.html
+++ b/myself/templates/myself/two.html
@@ -5,7 +5,7 @@
 
 <div class="second">
 <!--    <img class = 'second_menu' src = '../../../static/image/123.png'  role="button" onclick="openmenu()" > -->
-  <a class = 'second_menu'>Menu</a>
+  <a class = 'second_menu' type="button" onclick="openmenu()">Menu</a>
   <div class="menu_content"></div>
     <li><a href="http://127.0.0.1:8000/">Home</a></li><!--connect to on</li>e-->
     <li><a href="http://127.0.0.1:8000/two/">News</a></li><!--connect to two-->
