--- a/myself/templates/myself/one.html
+++ b/myself/templates/myself/one.html
@@ -2,20 +2,25 @@
 
 
 {%block content%}
-
-    
-
+<!--    <img class = 'second_menu' src = '../../../static/image/123.png'  role="button" onclick="openmenu()" > -->
+<!--navbar on phone-->
 <div class="second">
-    <a class = 'second_menu'>Menu</a>
-    
-
+  <a class = 'second_menu' type="button" onclick="openmenu()">Menu</a>
 </div>
+
+<!--show list menu when click-->
+<div class="menu_content">
+  <li><a href="http://127.0.0.1:8000/">Home</a></li><!--connect to on</li>e-->
+  <li><a href="http://127.0.0.1:8000/two/">News</a></li><!--connect to two-->
+  <li><a href="http://127.0.0.1:8000/three/">Contact</a></li><!--connect to three-->
+</div>    
+
 
 
 <div class="topnav">
-    <a class="is_active" href="http://127.0.0.1:8000/">Home</a>
-    <a class = "right_side" href="http://127.0.0.1:8000/two/" >wtf</a>
-    <a class = "right_side" href="http://127.0.0.1:8000/three/">www</a>
+    <a class="is_active" href="http://127.0.0.1:8000/">one</a>
+    <a class = "right_side" href="http://127.0.0.1:8000/two/" >two</a>
+    <a class = "right_side" href="http://127.0.0.1:8000/three/">three</a>
   
 </div>
 
