--- a/myself/templates/myself/three.html
+++ b/myself/templates/myself/three.html
@@ -2,10 +2,16 @@
 
 
 {%block content%}
-
+<!--navbar on phone-->
 <div class="second">
-<!--    <img class = 'second_menu' src = '../../../static/image/123.png' > -->
-    <a class = 'second_menu'>Menu</a>
+  <a class = 'second_menu' type="button" onclick="openmenu()">Menu</a>
+</div>
+  
+<!--show list menu when click-->
+<div class="menu_content">
+  <li><a href="http://127.0.0.1:8000/">Home</a></li><!--connect to on</li>e-->
+  <li><a href="http://127.0.0.1:8000/two/">News</a></li><!--connect to two-->
+  <li><a href="http://127.0.0.1:8000/three/">Contact</a></li><!--connect to three-->
 </div>
 
 <div class="topnav">
