--- a/myself/templates/myself/three.html
+++ b/myself/templates/myself/three.html
@@ -8,17 +8,17 @@
 </div>
   
 <!--show list menu when click-->
-<div class="menu_content">
+<div id="menu_content">
   <li><a href="http://127.0.0.1:8000/">Home</a></li><!--connect to on</li>e-->
   <li><a href="http://127.0.0.1:8000/two/">News</a></li><!--connect to two-->
   <li><a href="http://127.0.0.1:8000/three/">Contact</a></li><!--connect to three-->
 </div>
 
+
 <div class="topnav">
     <a href="http://127.0.0.1:8000/">Home</a>
     <a href="http://127.0.0.1:8000/two/" >News</a>
     <a class = 'is_active' href="http://127.0.0.1:8000/three/">Contact</a>
-  
 </div>
 
 
