--- a/myself/templates/myself/two.html
+++ b/myself/templates/myself/two.html
@@ -8,7 +8,7 @@
 </div>
 
 <!--show list menu when click-->
-<div class="menu_content">
+<div id="menu_content">
   <li><a href="http://127.0.0.1:8000/">Home</a></li><!--connect to on</li>e-->
   <li><a href="http://127.0.0.1:8000/two/">News</a></li><!--connect to two-->
   <li><a href="http://127.0.0.1:8000/three/">Contact</a></li><!--connect to three-->
