--- a/static/css/first.css
+++ b/static/css/first.css
@@ -48,7 +48,7 @@ body{
   color: rgb(255, 255, 255);
   
 }
-
+/* ------------------------------------------------------phone menu part---------------------------------------------------*/
 
 .second {
 
