--- a/myself/templates/myself/one.html
+++ b/myself/templates/myself/one.html
@@ -12,13 +12,13 @@
 <!--show list menu when click-->
 <div id = "menu">
   <div id="menu_content">
-    <li><a href="http://127.0.0.1:8000/">Home</a></li><!--connect to on</li>e-->
-    <li><a href="http://127.0.0.1:8000/two/">News</a></li><!--connect to two-->
-    <li><a href="http://127.0.0.1:8000/three/">Contact</a></li><!--connect to three-->
+    <a href="http://127.0.0.1:8000/">Home</a><!--connect to on</li>e-->
+    <a href="http://127.0.0.1:8000/two/">News</a><!--connect to two-->
+    <a href="http://127.0.0.1:8000/three/">Contact</a><!--connect to three-->
   </div>    
 </div>
 
-
+<!--navbar on computer-->
 <div class="topnav">
     <a class="is_active" href="http://127.0.0.1:8000/">one</a>
     <a class = "right_side" href="http://127.0.0.1:8000/two/" >two</a>
