--- a/myself/templates/myself/three.html
+++ b/myself/templates/myself/three.html
@@ -9,12 +9,12 @@
   
 <!--show list menu when click-->
 <div id="menu_content">
-  <li><a href="http://127.0.0.1:8000/">Home</a></li><!--connect to on</li>e-->
-  <li><a href="http://127.0.0.1:8000/two/">News</a></li><!--connect to two-->
-  <li><a href="http://127.0.0.1:8000/three/">Contact</a></li><!--connect to three-->
+  <a href="http://127.0.0.1:8000/">Home</a></li><!--connect to on</li>e-->
+  <a href="http://127.0.0.1:8000/two/">News</a></li><!--connect to two-->
+  <a href="http://127.0.0.1:8000/three/">Contact</a></li><!--connect to three-->
 </div>
 
-
+<!--navbar on computer-->
 <div class="topnav">
     <a href="http://127.0.0.1:8000/">Home</a>
     <a href="http://127.0.0.1:8000/two/" >News</a>
