--- a/myself/templates/myself/one.html
+++ b/myself/templates/myself/one.html
@@ -12,9 +12,9 @@
 <!--show list menu when click-->
 <div id = "menu">
   <div id="menu_content">
-    <a href="http://127.0.0.1:8000/">Home</a><!--connect to on</li>e-->
-    <a href="http://127.0.0.1:8000/two/">News</a><!--connect to two-->
-    <a href="http://127.0.0.1:8000/three/">Contact</a><!--connect to three-->
+    <p><a href="http://127.0.0.1:8000/">Home</a></p><!--connect to on</li>e-->
+    <p><a href="http://127.0.0.1:8000/two/">News</a></p><!--connect to two-->
+    <p><a href="http://127.0.0.1:8000/three/">Contact</a></p><!--connect to three-->
   </div>    
 </div>
 
