--- a/static/css/first.css
+++ b/static/css/first.css
@@ -84,19 +84,15 @@ body{
   bottom: 0px;
 }
 
-/*
-#menu_content{
-  display:list-item;align-items: center;
-}
-*/
 
-#menu_content p{
+
+#menu_content a{
   width: 100%;
   height: 70px;
-  display:list-item;align-items: center;
+  display: block;align-items:center;justify-content: center;
 }
 
-#menu_content p:hover{
+#menu_content a:hover{
   background-color: aqua;
 }
 
