--- a/myself/templates/myself/three.html
+++ b/myself/templates/myself/three.html
@@ -5,14 +5,17 @@
 <!--navbar on phone-->
 <div class="second">
   <a class = 'second_menu' type="button" onclick="openmenu()">Menu</a>
+<!--show list menu when click-->
+<div id = "menu">
+  <div id="menu_content">
+    <a href="http://127.0.0.1:8000/">Home</a><!--connect to on</li>-->
+    <a href="http://127.0.0.1:8000/two/">News</a><!--connect to two-->
+    <a href="http://127.0.0.1:8000/three/">Contact</a><!--connect to three-->
+    </div>    
+  </div>
 </div>
   
-<!--show list menu when click-->
-<div id="menu_content">
-  <a href="http://127.0.0.1:8000/">Home</a></li><!--connect to on</li>e-->
-  <a href="http://127.0.0.1:8000/two/">News</a></li><!--connect to two-->
-  <a href="http://127.0.0.1:8000/three/">Contact</a></li><!--connect to three-->
-</div>
+
 
 <!--navbar on computer-->
 <div class="topnav">
