--- a/myself/templates/myself/one.html
+++ b/myself/templates/myself/one.html
@@ -8,11 +8,11 @@
 <div class="second">
   <a class = 'second_menu' type="button" onclick="openmenu()">Menu</a>
 <!--show list menu when click-->
-<div id = "menu">
-  <div id="menu_content">
-    <a href="http://127.0.0.1:8000/">Home</a><!--connect to on</li>-->
-    <a href="http://127.0.0.1:8000/two/">News</a><!--connect to two-->
-    <a href="http://127.0.0.1:8000/three/">Contact</a><!--connect to three-->
+  <div id = "menu">
+    <div id="menu_content">
+      <a href="http://127.0.0.1:8000/"><span class="words">Home</span></a><!--connect to on</li>-->
+      <a href="http://127.0.0.1:8000/two/"><span class="words">News</span></a><!--connect to two-->
+      <a href="http://127.0.0.1:8000/three/"><span class="words">Contact</span></a><!--connect to three-->
     </div>    
   </div>
 </div>
