--- a/static/css/first.css
+++ b/static/css/first.css
@@ -64,36 +64,44 @@ body{
   width: 60px;
   height: 40px;
   background-color: rgb(78, 132, 88);
-  display: flex;align-items: center;justify-content: center;
+  display:flex;align-items: center;justify-content: center;
   text-decoration: none;  
   color: white;
 }
 
 .second_menu:hover{
   background-color: rgb(43, 76, 49);
-  
 }
 
 #menu{
-  display: none;
   position: absolute;
-  background-color: rgb(237, 239, 240);
+  background-color: rgb(52, 50, 50);
   flex-direction: column;
   width: 100%;
   top: 40px;
   bottom: 0px;
 }
 
-
+#menu_content{
+  margin-top: 60px;
+}
 
 #menu_content a{
+  color: aliceblue;
   width: 100%;
   height: 70px;
-  display: block;align-items:center;justify-content: center;
+  display:flex;align-items: center;justify-content:center;
+  text-decoration: none;  
 }
 
 #menu_content a:hover{
-  background-color: aqua;
+  background-color: aliceblue;
+  color: rgb(52, 50, 50);
+}
+
+.words{
+  display:inline-block;
+  width: 90%;
 }
 
 @media (max-width:500px) { /*what should the web do when the web width is not enough*/
