--- a/myself/templates/myself/one.html
+++ b/myself/templates/myself/one.html
@@ -10,6 +10,7 @@
 <!--show list menu when click-->
   <div id = "menu">
     <div id="menu_content">
+      <img src=".\static\image\x.jpg" id ='x_button' type="button">
       <a href="http://127.0.0.1:8000/"><span class="words">Home</span></a><!--connect to on</li>-->
       <a href="http://127.0.0.1:8000/two/"><span class="words">News</span></a><!--connect to two-->
       <a href="http://127.0.0.1:8000/three/"><span class="words">Contact</span></a><!--connect to three-->
