--- a/static/css/first.css
+++ b/static/css/first.css
@@ -107,9 +107,10 @@ body{
 }
 
 #x_button{
-  height: 50px;
+  height: 45px;
   width: 50px;
-
+  background-color: rgb(52, 50, 50);
+  
 }
 
 @media (max-width:500px) { /*what should the web do when the web width is not enough*/
