--- a/myself/templates/myself/home.html
+++ b/myself/templates/myself/home.html
@@ -9,9 +9,9 @@
   <a class = 'second_menu' type="button" onclick="openmenu()">Menu</a>
 <!--show list menu when click-->
   <div id = "menu">
-    <img id ='x_button' src="C:\Users\stang24\Desktop\project\web\static\image\x.png"  role="button" onclick="openmenu()"><!--change it to text"X"-->
+    <img id ='x_button' src=".\static\image\x.png" \ role="button" onclick="openmenu()"><!--change it to text"X"-->
     <div id="menu_content">
-      <a href="http://127.0.0.1:8000/one"><span class="words">Home</span></a><!--connect to on</li>-->
+      <a href="http://127.0.0.1:8000/"><span class="words">Home</span></a><!--connect to on</li>-->
       <a href="http://127.0.0.1:8000/two/"><span class="words">News</span></a><!--connect to two-->
       <a href="http://127.0.0.1:8000/three/"><span class="words">Contact</span></a><!--connect to three-->
     </div>    
@@ -20,9 +20,9 @@
 
 <!--navbar on computer-->
 <div class="topnav">
-    <a class="is_active" href="http://127.0.0.1:8000/one">one</a>
-    <a href="http://127.0.0.1:8000/two/" >two</a>
-    <a href="http://127.0.0.1:8000/three/">three</a>
+    <a class="is_active" href="http://127.0.0.1:8000/">one</a>
+    <a class = "right_side" href="http://127.0.0.1:8000/two/" >two</a>
+    <a class = "right_side" href="http://127.0.0.1:8000/three/">three</a>
 </div>
 
 <div id="content">
