--- a/myself/templates/myself/three.html
+++ b/myself/templates/myself/three.html
@@ -8,7 +8,7 @@
 <!--show list menu when click-->
   <div id = "menu">
     <div id="menu_content">
-      <a href="http://127.0.0.1:8000/"><span class="words">Home</span></a><!--connect to on</li>-->
+      <a href="http://127.0.0.1:8000/one"><span class="words">Home</span></a><!--connect to on</li>-->
       <a href="http://127.0.0.1:8000/two/"><span class="words">News</span></a><!--connect to two-->
       <a href="http://127.0.0.1:8000/three/"><span class="words">Contact</span></a><!--connect to three-->
     </div>    
@@ -19,7 +19,7 @@
 
 <!--navbar on computer-->
 <div class="topnav">
-    <a href="http://127.0.0.1:8000/">Home</a>
+    <a href="http://127.0.0.1:8000/one">Home</a>
     <a href="http://127.0.0.1:8000/two/" >News</a>
     <a class = 'is_active' href="http://127.0.0.1:8000/three/">Contact</a>
 </div>
