--- a/myself/templates/myself/two.html
+++ b/myself/templates/myself/two.html
@@ -8,7 +8,7 @@
 <!--show list menu when click-->
   <div id = "menu">
     <div id="menu_content">
-      <a href="http://127.0.0.1:8000/"><span class="words">Home</span></a><!--connect to on</li>-->
+      <a href="http://127.0.0.1:8000/one"><span class="words">Home</span></a><!--connect to on</li>-->
       <a href="http://127.0.0.1:8000/two/"><span class="words">News</span></a><!--connect to two-->
       <a href="http://127.0.0.1:8000/three/"><span class="words">Contact</span></a><!--connect to three-->
     </div>    
@@ -20,7 +20,7 @@
 <!--navbar on computer-->
 <div class="topnav">
     
-    <a href="http://127.0.0.1:8000/">Home</a><!--connect to one-->
+    <a href="http://127.0.0.1:8000/one">Home</a><!--connect to one-->
     <a class = 'is_active' href="http://127.0.0.1:8000/two/">News</a><!--connect to two-->
     <a href="http://127.0.0.1:8000/three/">Contact</a><!--connect to three-->
 
