--- a/static/css/first.css
+++ b/static/css/first.css
@@ -8,7 +8,7 @@ body{
 }
 
 .topnav {
-
+  
   background-color: rgb(76, 74, 74);
   display: flex;/* let <a>part be flex*/
 }
@@ -107,11 +107,14 @@ body{
 }
 
 #x_button{
+  
+  float: right;
   height: 45px;
   width: 50px;
   background-color: rgb(52, 50, 50);
-  
 }
+
+
 
 @media (max-width:500px) { /*what should the web do when the web width is not enough*/
   .topnav {/*web setting on pc (hide)*/
