--- a/myself/templates/myself/home.html
+++ b/myself/templates/myself/home.html
@@ -11,7 +11,7 @@
   <div id = "menu">
     <!--<img id ='x_button' src=".\static\image\x.png" \ role="button" onclick="openmenu()"> "change it to text"X""-->
     <div id="menu_content">
-      <a href="http://127.0.0.1:8000/one/"><span class="words">Home</span></a><!--connect to on</li>-->
+      <a href="http://127.0.0.1:8000/one/"><span class="words">Home</span></a><!--connect to one-->
       <a href="http://127.0.0.1:8000/two/"><span class="words">News</span></a><!--connect to two-->
       <a href="http://127.0.0.1:8000/three/"><span class="words">Contact</span></a><!--connect to three-->
     </div>    
