--- a/static/css/first.css
+++ b/static/css/first.css
@@ -5,6 +5,7 @@ body{
   margin-left: auto;
   margin-top: auto;
   width: 100%;
+  
 }
 
 .topnav {
@@ -106,7 +107,7 @@ body{
   display:inline-block;
   width: 90%;
 }
-
+/*
 #x_button{
   position:relative;
   float: right;
@@ -116,9 +117,19 @@ body{
   color: aliceblue;
   font-size:xx-large;
 }
+*/
+#x_button{
+  position: absolute;
+  display: block;
+  top: 10px;
+  right: 10px;
+  width: 64px;
+  height: 64px;
+  padding: 0;
+}
 
 #x_button span{
-  position:relative; top:25px; left: 25px;
+  position:relative; top:25px; left: 0px;
 }
 
 
