--- a/myself/templates/myself/home.html
+++ b/myself/templates/myself/home.html
@@ -8,7 +8,7 @@
 <div class="second">
   <a class = 'second_menu' type="button" onclick="openmenu()">Menu</a>
 <!--show list menu when click-->
-  <div id = "menu">
+  <div id = "menu" style="display: none;">
     <!--<img id ='x_button' src=".\static\image\x.png" \ role="button" onclick="openmenu()"> "change it to text"X""-->
     <div id="menu_content">
       <a href="http://127.0.0.1:8000/one/"><span class="words">Home</span></a><!--connect to one-->
