--- a/myself/templates/myself/three.html
+++ b/myself/templates/myself/three.html
@@ -6,7 +6,7 @@
 <div class="second">
   <a class = 'second_menu' type="button" onclick="openmenu()">Menu</a>
 <!--show list menu when click-->
-  <div id = "menu">
+  <div id = "menu" style="display: none;">
     <div id="menu_content">
       <a href="http://127.0.0.1:8000/one/"><span class="words">Home</span></a><!--connect to on</li>-->
       <a href="http://127.0.0.1:8000/two/"><span class="words">News</span></a><!--connect to two-->
@@ -24,6 +24,9 @@
     <a class = 'is_active' href="http://127.0.0.1:8000/three/">Contact</a>
 </div>
 
+<div id="content" style="display: block;">
+  <h1>wwwww</h1>
+  <h1>wddiajwd</h1>
+</div>
 
-<h1>wddiajwd</h1>
 {% endblock %}
