--- a/myself/templates/myself/home.html
+++ b/myself/templates/myself/home.html
@@ -20,12 +20,12 @@
 
 <!--navbar on computer-->
 <div class="topnav">
-    <a class="is_active" href="http://127.0.0.1:8000/">one</a>
-    <a class = "right_side" href="http://127.0.0.1:8000/two/" >two</a>
-    <a class = "right_side" href="http://127.0.0.1:8000/three/">three</a>
+    <a  href="http://127.0.0.1:8000/one/">one</a>
+    <a  href="http://127.0.0.1:8000/two/" >two</a>
+    <a  href="http://127.0.0.1:8000/three/">three</a>
 </div>
 
-<div id="content">
+<div id="content" style="display: block;">
   <h1>wwwww</h1>
 </div>
 
