--- a/myself/templates/myself/one.html
+++ b/myself/templates/myself/one.html
@@ -9,7 +9,7 @@
   <a class = 'second_menu' type="button" onclick="openmenu()">Menu</a>
 <!--show list menu when click-->
   <div id = "menu" style="display: none;">
-    <div id="x_button" role="button" onclick="openmenu()"><span>x</span></div>
+    <div id="x_button" role="button" onclick="openmenu()"><span>&#10006;</span></div>
     <!--<img id ='x_button' src="C:\Users\stang24\Desktop\project\web\static\image\x.png"  role="button" onclick="openmenu()">  "change it to text"X""-->
     <div id="menu_content">
       <a href="http://127.0.0.1:8000/one/"><span class="words">Home</span></a><!--connect to on</li>-->
