--- a/static/css/first.css
+++ b/static/css/first.css
@@ -110,16 +110,12 @@ body{
 
 #x_button{
   position:relative; /*the position of object when the web size change*/
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  height: 50px;
-  width: 50px;
-  background-color: rgb(52, 50, 50);
-  color: aliceblue;
-  border-radius: 3px;
-  float: right;
-  padding: 8px 16px;
+  /*display: flex;justify-content: center;align-items: center;*/  /* X mark location */
+  height: 50px;width: 50px;/* size */
+  background-color: rgb(52, 50, 50);color: aliceblue; /* color */
+  border-radius: 3px; /* side radius */
+  float: right;margin-right: 15px; margin-top: 20px;/* location */
+  
 }
 /*
 #x_button{
@@ -136,7 +132,6 @@ body{
 
 #x_button span{
   position:absolute;
-  display: inline-block;
   font-size: 25px;
   height: 25px;
   width: 25px;  
