--- a/myself/templates/myself/home.html
+++ b/myself/templates/myself/home.html
@@ -3,6 +3,8 @@
 
 {%block content%}
 <!--    <img class = 'second_menu' src = '../../../static/image/123.png'  role="button" onclick="openmenu()" > -->
+
+<div id="home_button" type="button"><a href='http://127.0.0.1:8000/'>EASON</a></div>
 <!--navbar on phone-->
 
 <div class="second">
