--- a/myself/templates/myself/one.html
+++ b/myself/templates/myself/one.html
@@ -3,6 +3,8 @@
 
 {%block content%}
 <!--    <img class = 'second_menu' src = '../../../static/image/123.png'  role="button" onclick="openmenu()" > -->
+<div id="home_button"><a href='http://127.0.0.1:8000/'><span id="home_button_word">EASON</span></a></div>
+
 <!--navbar on phone-->
 
 <div class="second">
@@ -25,6 +27,7 @@
     <a href="http://127.0.0.1:8000/two/" >two</a>
     <a href="http://127.0.0.1:8000/three/">three</a>
 </div>
+
 
 <div id="content" style="display: block;">
   <h1>wwwww</h1>
