--- a/myself/templates/myself/two.html
+++ b/myself/templates/myself/two.html
@@ -2,11 +2,16 @@
 
 {%block content%}
 
+<div id="home_button"><a href='http://127.0.0.1:8000/'>EASON</a></div>
+
 <!--navbar on phone-->
+
 <div class="second">
   <a class = 'second_menu' type="button" onclick="openmenu()">Menu</a>
 <!--show list menu when click-->
   <div id = "menu" style="display: none;">
+    <div id="x_button" role="button" onclick="openmenu()"><span>&#10006;</span></div>
+    <!--<img id ='x_button' src="C:\Users\stang24\Desktop\project\web\static\image\x.png"  role="button" onclick="openmenu()">  "change it to text"X""-->
     <div id="menu_content">
       <a href="http://127.0.0.1:8000/one/"><span class="words">Home</span></a><!--connect to on</li>-->
       <a href="http://127.0.0.1:8000/two/"><span class="words">News</span></a><!--connect to two-->
@@ -15,16 +20,13 @@
   </div>
 </div>
 
-
-
 <!--navbar on computer-->
 <div class="topnav">
-    
-    <a href="http://127.0.0.1:8000/one">Home</a><!--connect to one-->
-    <a class = 'is_active' href="http://127.0.0.1:8000/two/">News</a><!--connect to two-->
-    <a href="http://127.0.0.1:8000/three/">Contact</a><!--connect to three-->
-
+    <a href="http://127.0.0.1:8000/one">one</a>
+    <a class="is_active" href="http://127.0.0.1:8000/two/" >two</a>
+    <a href="http://127.0.0.1:8000/three/">three</a>
 </div>
+
 
 <div id="content" style="display: block;">
   <h1>wweffwww</h1>
