--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="{%static 'css/first.css'%}">
     <script src="{%static 'js/f.js'%}"></script>
-    
+    <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     
 </head>
 <body>
