--- a/static/css/first.css
+++ b/static/css/first.css
@@ -7,11 +7,32 @@ body{
   width: 100%;
   
 }
-
-.topnav {
-  
+/* home button*/
+#home_button{
   background-color: rgb(26, 25, 25);
   display: flex;/* let <a>part be flex*/
+  
+}
+
+#home_button a{
+  color: rgb(255, 255, 255);
+  flex: none;/* how big <a>thing is. In this case, it's using width*/
+  width: 65px;
+  height: 50px;
+  display: flex;align-items: center;justify-content: center;
+  text-decoration: none; 
+  font-family: 'Source Sans Pro', sans-serif;
+}
+
+#home_button_word{
+  font-size:40px;
+  
+}
+/* normal navbar */
+.topnav{
+  background-color: rgb(26, 25, 25);
+  display: flex;justify-content: end;/* let <a>part be flex*/
+  margin-top: -50px;
 }
 
 
@@ -24,7 +45,7 @@ body{
   width: 65px;
   height: 50px;
   display: flex;align-items: center;justify-content: center;
-  text-decoration: none;  
+  text-decoration: none; 
 }
 /*
 .right_side{
@@ -54,8 +75,9 @@ body{
 .second {
 
   background-color: rgb(26, 25, 25);
-  display: none; /* hide */
+  display: none;justify-content: end; /* hide */
   flex-wrap: wrap; /* */ 
+  margin-top: -50px;
 }
 
 .second_menu{
@@ -77,7 +99,7 @@ body{
   background-color: rgb(52, 50, 50);
   flex-direction: column;
   width: 100%;
-  top: 40px;
+  top: 50px;
   bottom: 0px;
   display: none;
 }
