--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -16,7 +16,7 @@ body{
 
 #home_button a{
   color: rgb(255, 255, 255);
-  flex: none;/* how big <a>thing is. In this case, it's using width*/
+  flex: none;
   width: 65px;
   height: 50px;
   display: flex;align-items: center;justify-content: center;
@@ -26,7 +26,8 @@ body{
 
 #home_button_word{
   font-size:40px;
-  
+  font-weight: 100;
+  letter-spacing: -2px;
 }
 /* normal navbar */
 .topnav{
