--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="{%static 'css/first.css'%}">
+    <link rel="stylesheet" href="{%static 'css/navbar.css'%}">
     <script src="{%static 'js/f.js'%}"></script>
     <link href='https://fonts.googleapis.com/css?family=Source+Sans+Pro' rel='stylesheet' type='text/css'>
     
