--- a/myself/templates/myself/home.html
+++ b/myself/templates/myself/home.html
@@ -2,6 +2,7 @@
 
 
 {%block content%}
+<!--<div id="screenFiller">-->
 <!--    <img class = 'second_menu' src = '../../../static/image/123.png'  role="button" onclick="openmenu()" > -->
 
 <div id="home_button" type="button"><a href='http://127.0.0.1:8000/'>EASON</a></div>
@@ -27,8 +28,10 @@
     <a  href="http://127.0.0.1:8000/three/">three</a>
 </div>
 
+
+
 <div id="content" style="display: block;">
-  <h1>wwwww</h1>
+
 </div>
 
 {% endblock %}
