--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -1,10 +1,16 @@
 * {box-sizing: border-box}
-body {font-family: Arial, Helvetica, sans-serif;}
-
-body{
+body, html {
+  font-family: Arial, Helvetica, sans-serif;
   margin-left: auto;
   margin-top: auto;
   width: 100%;
+  height: 100%;
+
+}
+
+#screenFiller {
+  position: absolute;
+  top: 0; right: 0; bottom: 0; left: 0;
   
 }
 /* home button*/
@@ -145,7 +151,19 @@ body{
 
 #x_button:hover{
   color:rgb(41, 39, 39);background-color: aliceblue;
+  
+  
 }
+/*  content */
+svg {
+  display: block;
+}
+
+#content{
+  height: 100%;
+  width: 100%;
+}
+
 
 @media (max-width:500px) { /*what should the web do when the web width is not enough*/
   .topnav {/*web setting on pc (hide)*/
