--- a/myself/templates/myself/home.html
+++ b/myself/templates/myself/home.html
@@ -30,8 +30,13 @@
 
 
 
-<div id="content" style="display: block;">
-
+<div id="content" style="display: flex;">
+  <div id="filler"></div>
+  <svg class="svg" height="100%" width="100%" viewBox="0 0 600 600">
+    <g transform="translate(600 600)">
+       <polygon points="0,0 200,0 100,100" style="fill:lime;stroke:purple;stroke-width:1" />
+    </g>
+  </svg>
 </div>
 
 {% endblock %}
