--- a/myself/templates/myself/home.html
+++ b/myself/templates/myself/home.html
@@ -32,11 +32,11 @@
 
 <div id="content" style="display: flex;">
   <div id="filler"></div>
-  <svg class="svg" height="100%" width="100%" viewBox="0 0 600 600">
-    <g transform="translate(600 600)">
-       <polygon points="0,0 200,0 100,100" style="fill:lime;stroke:purple;stroke-width:1" />
-    </g>
-  </svg>
+  <div id="my_div">
+    <svg width='100' height='100%' viewBox='0 0 100 100' preserveAspectRatio='none' style="text-align: center;">
+      <line x1="0" y1="100" x2="100" y2="0" vector-effect="non-scaling-stroke" stroke="black" />
+    </svg>
+  </div>
 </div>
 
 {% endblock %}
