--- a/myself/templates/myself/home.html
+++ b/myself/templates/myself/home.html
@@ -30,13 +30,9 @@
 
 
 
-<div id="content" style="display: flex;">
+<div id="content" style="display: block;">
   <div id="filler"></div>
-  <div id="my_div">
-    <svg width='100' height='100%' viewBox='0 0 100 100' preserveAspectRatio='none' style="text-align: center;">
-      <line x1="0" y1="100" x2="100" y2="0" vector-effect="non-scaling-stroke" stroke="black" />
-    </svg>
-  </div>
+  <div id="content_me"></div>
 </div>
 
 {% endblock %}
