--- a/myself/templates/myself/one.html
+++ b/myself/templates/myself/one.html
@@ -3,7 +3,9 @@
 
 {%block content%}
 <!--    <img class = 'second_menu' src = '../../../static/image/123.png'  role="button" onclick="openmenu()" > -->
-<div id="home_button"><a href='http://127.0.0.1:8000/'><span id="home_button_word">EASON</span></a></div>
+ <a id="home_button" href='http://127.0.0.1:8000/'>
+  <img src="../../../static/image/wvhs.png" style="height: 65px; width: 65px;">
+ </a>
 
 <!--navbar on phone-->
 
@@ -30,6 +32,7 @@
 
 
 <div id="content" style="display: block;">
+  <div id="filler"></div>
   <h1>wwwww</h1>
 </div>
 
