--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -39,7 +39,7 @@ body, html {
 .topnav{
   background-color: #212121;
   display: flex;justify-content: end;/* let <a>part be flex*/
-  margin-top: -50px;
+  margin-top: -65px;
 }
 
 
@@ -49,8 +49,8 @@ body, html {
   color: rgb(255, 255, 255);
   /* text-align: center; where the text locate*/
   flex: none;/* how big <a>thing is. In this case, it's using width*/
-  width: 65px;
-  height: 50px;
+  width: 70px;
+  height: 65px;
   display: flex;align-items: center;justify-content: center;
   text-decoration: none; 
 }
@@ -67,8 +67,10 @@ body, html {
 }
 
 .topnav a.is_active{
-  background-color: rgb(86, 131, 173);
-  color: rgb(255, 255, 255);
+  padding: 10px;
+  -webkit-box-shadow:0px 2px 4px #ffffff;
+  -moz-box-shadow:0px 2px 4px #ffffff;
+  box-shadow:0px 2px 4px #ffffff;
   
 }
 
@@ -165,7 +167,7 @@ body, html {
 }
 
 #filler{
-  height: 50px;
+  height: 65px;
   width: 100%;
 }
 
