--- a/myself/templates/myself/home.html
+++ b/myself/templates/myself/home.html
@@ -5,7 +5,9 @@
 <!--<div id="screenFiller">-->
 <!--    <img class = 'second_menu' src = '../../../static/image/123.png'  role="button" onclick="openmenu()" > -->
 
-<div id="home_button" type="button"><a href='http://127.0.0.1:8000/'>EASON</a></div>
+<a id="home_button" href='http://127.0.0.1:8000/'>
+  <img src="../../../static/image/wvhs.png" style="height: 65px; width: 65px;">
+</a>
 <!--navbar on phone-->
 
 <div class="second">
@@ -30,9 +32,13 @@
 
 
 
-<div id="content" style="display: block;">
-  <div id="filler"></div>
-  <div id="content_me"></div>
+<div id="content_home" style="display: block;">
+  <div id="content_me">
+    <div id="filler"></div>
+    <p>Hi, I'm Eason.</p>
+    <p>A student from Wyalusing PA.</p>
+
+  </div>
 </div>
 
 {% endblock %}
