--- a/myself/templates/myself/two.html
+++ b/myself/templates/myself/two.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 
 {%block content%}
-
-<div id="home_button"><a href='http://127.0.0.1:8000/'>EASON</a></div>
-
+<a id="home_button" href='http://127.0.0.1:8000/'>
+  <img src="../../../static/image/wvhs.png" style="height: 65px; width: 65px;">
+</a>
 <!--navbar on phone-->
 
 <div class="second">
