--- a/myself/templates/myself/home.html
+++ b/myself/templates/myself/home.html
@@ -35,8 +35,10 @@
 <div id="content_home" style="display: block;">
   <div id="content_me">
     <div id="filler"></div>
-    <p>Hi, I'm Eason.</p>
-    <p>A student from Wyalusing PA.</p>
+    <div id="about_me">
+      <p class="big">Hi, I'm Eason.</p>
+      <p class="small">A student from Wyalusing PA.</p>
+    </div>
 
   </div>
 </div>
