--- a/myself/templates/myself/home.html
+++ b/myself/templates/myself/home.html
@@ -32,7 +32,8 @@
 
 
 
-<div id="content_home" style="display: block;">
+<div class="content_home" style="display: block;">
+  <script> ease_thing("home")</script>
   <div id="content_me">
     <div id="filler"></div>
     <div id="about_me">
