--- a/myself/templates/myself/one.html
+++ b/myself/templates/myself/one.html
@@ -25,9 +25,9 @@
 
 <!--navbar on computer-->
 <div class="topnav">
-    <a class="is_active" href="http://127.0.0.1:8000/one">one</a>
-    <a href="http://127.0.0.1:8000/two/" >two</a>
-    <a href="http://127.0.0.1:8000/three/">three</a>
+    <a class="other" href="http://127.0.0.1:8000/one">one</a>
+    <a class="other" href="http://127.0.0.1:8000/two/" >two</a>
+    <a class="other" href="http://127.0.0.1:8000/three/">three</a>
 </div>
 
 
