--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -5,8 +5,11 @@ body, html {
   margin-top: auto;
   width: 100%;
   height: 100%;
+  transition-timing-function: ease;
 
 }
+
+
 
 #screenFiller {
   position: absolute;
@@ -42,30 +45,30 @@ body, html {
   margin-top: -65px;
 }
 
-
+/* find out how to let other element change color when one element is hover*/
 .topnav a {
 
   background-color: #212121;
-  color: rgb(255, 255, 255);
+  color: rgb(77, 77, 77);
   /* text-align: center; where the text locate*/
   flex: none;/* how big <a>thing is. In this case, it's using width*/
   width: 70px;
   height: 65px;
   display: flex;align-items: center;justify-content: center;
   text-decoration: none; 
+  transition: color 1s;
 }
 /*
-.right_side{
-  display: flex;align-items: end;
-
-
+.topnav:hover{
+  color: aqua;
 }
 */
+
 .topnav a:hover{
-  background-color: aliceblue;
-  color: #212121;
+  color:aliceblue
 }
 
+/*
 .topnav a.is_active{
   padding: 10px;
   -webkit-box-shadow:0px 2px 4px #ffffff;
@@ -79,6 +82,8 @@ body, html {
   color: #212121;
   
 }
+*/
+
 /* ----------------------------------------phone menu part---------------------------------------------------*/
 
 .second {
@@ -166,6 +171,7 @@ body, html {
   height: 100%;
   width: 100%;
   margin-top: -65px;
+  transition-timing-function: display 1s;
  
 }
 
@@ -180,7 +186,7 @@ body, html {
   width: 50%;
 }
 
-#content_home{
+.content_home{
   height: 100%;
   width: 100%;
   margin-top: -65px;
@@ -193,7 +199,7 @@ body, html {
 }
 
 .small{
-  font-size: 25px;
+  font-size: 15px;
   font-weight: 600;
   color: #ffffff;
 }
@@ -214,5 +220,7 @@ body, html {
     flex-wrap: wrap;
   }  
 }
+
+
 
 
