--- a/myself/templates/myself/home.html
+++ b/myself/templates/myself/home.html
@@ -10,6 +10,22 @@
 </a>
 <!--navbar on phone-->
 
+
+<div class="second transition">
+  <a class = 'second_menu' type="button" onclick="openmenu()">Menu</a>
+<!--show list menu when click-->
+  <div id = "menu" style="display: none;">
+    <div id="x_button" role="button" onclick="openmenu()"><span>&#10006;</span></div>
+    <!--<img id ='x_button' src="C:\Users\stang24\Desktop\project\web\static\image\x.png"  role="button" onclick="openmenu()">  "change it to text"X""-->
+    <div id="menu_content">
+      <a href="http://127.0.0.1:8000/one/"><span class="words">Home</span></a><!--connect to on</li>-->
+      <a href="http://127.0.0.1:8000/two/"><span class="words">News</span></a><!--connect to two-->
+      <a href="http://127.0.0.1:8000/three/"><span class="words">Contact</span></a><!--connect to three-->
+    </div>    
+  </div>
+</div>
+
+
 <div class="second">
   <a class = 'second_menu' type="button" onclick="openmenu()">Menu</a>
 <!--show list menu when click-->
