--- a/myself/templates/myself/one.html
+++ b/myself/templates/myself/one.html
@@ -5,10 +5,8 @@
 <!--    <img class = 'second_menu' src = '../../../static/image/123.png'  role="button" onclick="openmenu()" > -->
 <a id="home_button" href='http://127.0.0.1:8000/'>
   <img src="../../../static/image/wvhs.png" style="height: 65px; width: 65px;">
-</a>
-
-<!--navbar on phone-->
-
+ </a>
+<!--nav on phone  -->
 <div class="second">
   <a class = 'second_menu' type="button" onclick="openmenu()">Menu</a>
 <!--show list menu when click-->
@@ -24,10 +22,10 @@
 </div>
 
 <!--navbar on computer-->
-<div class="topnav">
-    <a class="other" href="http://127.0.0.1:8000/one">one</a>
-    <a class="other" href="http://127.0.0.1:8000/two/" >two</a>
-    <a class="other" href="http://127.0.0.1:8000/three/">three</a>
+<div class="topnav transition">
+    <a class="is_active" href="http://127.0.0.1:8000/one">one</a>
+    <a href="http://127.0.0.1:8000/two/" >two</a>
+    <a href="http://127.0.0.1:8000/three/">three</a>
 </div>
 
 
