--- a/static/css/navbar.css
+++ b/static/css/navbar.css
@@ -5,7 +5,6 @@ body, html {
   margin-top: auto;
   width: 100%;
   height: 100%;
-  transition-timing-function: ease;
 
 }
 
@@ -47,7 +46,6 @@ body, html {
 
 /* find out how to let other element change color when one element is hover*/
 .topnav a {
-
   background-color: #212121;
   color: rgb(77, 77, 77);
   /* text-align: center; where the text locate*/
@@ -190,20 +188,24 @@ body, html {
   height: 100%;
   width: 100%;
   margin-top: -65px;
+  
 }
 
-.big{
+.big{ 
   font-size: 50px;
   font-weight: 700;
   color: aliceblue;
 }
 
 .small{
-  font-size: 15px;
+  font-size: 25px;
   font-weight: 600;
   color: #ffffff;
 }
 
+#about_me{
+  animation: move 1s;
+}
 
 @media (max-width:500px) { /*what should the web do when the web width is not enough*/
   .topnav {/*web setting on pc (hide)*/
@@ -222,5 +224,14 @@ body, html {
 }
 
 
+@keyframes move{
+  from {
+    opacity: 0;
+    transform: translateX(-100%);
+  }
 
-
+  to {
+    opacity: 1;
+    transform: translateX(0);
+  }
+}
